--- a/XamarinUncrustify/XamarinUncrustify.csproj
+++ b/XamarinUncrustify/XamarinUncrustify.csproj
@@ -38,6 +38,7 @@
     <Compile Include="App.cs" />
     <Compile Include="CommandExecuter.cs" />
     <Compile Include="Placeholder.cs" />
+    <Compile Include="Config.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Manifest.addin.xml">
@@ -63,9 +64,7 @@
     <MonoDevelop>
       <Properties>
         <Policies>
-          <VersionControlPolicy inheritsSet="Mono">
-            <CommitMessageStyle Header="" Indent="" FirstFilePrefix="* " FileSeparator=":&#xA;* " LastFilePostfix=": " LineAlign="2" InterMessageLines="1" IncludeDirectoryPaths="False" Wrap="True" />
-          </VersionControlPolicy>
+          <VersionControlPolicy inheritsSet="Mono" />
           <DotNetNamingPolicy DirectoryNamespaceAssociation="Hierarchical" ResourceNamePolicy="FileName" />
         </Policies>
       </Properties>
