--- a/XamarinUncrustify/XamarinUncrustify.csproj
+++ b/XamarinUncrustify/XamarinUncrustify.csproj
@@ -30,7 +30,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AddinInfo.cs" />
-    <Compile Include="ProcessExecuteOnSave.cs" />
     <Compile Include="FormattingCommander.cs" />
     <Compile Include="StateHandler.cs" />
     <Compile Include="ConfigurePanel.cs" />
@@ -64,7 +63,9 @@
     <MonoDevelop>
       <Properties>
         <Policies>
-          <VersionControlPolicy inheritsSet="Mono" />
+          <VersionControlPolicy inheritsSet="Mono">
+            <CommitMessageStyle Header="" Indent="" FirstFilePrefix="* " FileSeparator=":&#xA;* " LastFilePostfix=": " LineAlign="2" InterMessageLines="1" IncludeDirectoryPaths="False" Wrap="True" />
+          </VersionControlPolicy>
           <DotNetNamingPolicy DirectoryNamespaceAssociation="Hierarchical" ResourceNamePolicy="FileName" />
         </Policies>
       </Properties>
